# robot_with_gripper

./: CMakeLists.txt  README.md  package.xml
config/: robot_semantic_description.srdf
launch/: gazebo.launch.py  model_bringup.launch  ros1_gazebo.launch  ros1_view_ur.launch  view_ur.launch.py
rviz/: view_model.rviz  view_model_ros1.rviz
urdf/: ur10e_with_gripper_ros1.urdf.xacro  ur10e_with_robotiq_gripper.urdf.xacro
