<?xml version="1.0"?>
<package format="3">
  <name>robot_with_gripper</name>
  <version>1.0.0</version>
  <description>UR10e with Robotiq 2F 85 Gripper</description>
  <maintainer email="abc@de.fg">Yeeeerrr Yeeeerrrson</maintainer>
  <author>Yeeeerrr Yeeeerrrson</author>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
      <build_type>ament_cmake</build_type>
  </export>
</package>